--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 			<li>Peppers</li>
 			<li>Bananas</li>
 			<li>Sugar</li>
-			<li>Squash</li>
+			<li><b>SQUASH</b></li>
 		</ul>
 	</body>
 </html>
