--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 			<li>Onion</li>
 			<li>Peppers</li>
 			<li>Bananas</li>
-			<li>Sugar</li>
+			<li><a href=http://www.google.com>Sugar</a></li>
 			<li><b>SQUASH</b></li>
 		</ul>
 	</body>
